--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,12 @@
     },
     "ui": {
       "enabled": true
+    },
+    "auth": {
+      "port": 9099
+    },
+    "pubsub": {
+      "port": 8085
     }
   }
 }
